--- a/tasks/package.yml
+++ b/tasks/package.yml
@@ -4,10 +4,12 @@
   apt_key:
     url: https://www.postgresql.org/media/keys/ACCC4CF8.asc
     id: ACCC4CF8
+  when: postgresql_pgdg_repo
 
 - name: add APT repository
   apt_repository:
     repo: 'deb http://apt.postgresql.org/pub/repos/apt/ {{ ansible_distribution_release }}-pgdg main {{ postgresql_pkg_version }}'
+  when: postgresql_pgdg_repo
 
 - name: install postgresql server
   apt:
