--- a/tasks/package.yml
+++ b/tasks/package.yml
@@ -33,7 +33,7 @@
     state: present
     update_cache: yes
     cache_valid_time: 3600
-  with_items: postgresql_extensions
+  with_items: '{{ postgresql_extensions }}'
   when: postgresql_server_install
   notify: postgresql_restart
 
