--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -10,14 +10,14 @@
 
 - name: reset the cluster - drop the existing one
   shell: 'pg_dropcluster --stop {{ postgresql_pkg_version }} {{ postgresql_cluster_name }}'
-  sudo: yes
-  sudo_user: '{{ postgresql_admin_user }}'
+  become: true
+  bocome_user: '{{ postgresql_admin_user }}'
   when: postgresql_cluster_reset
 
 - name: reset the cluster - create a new one (with specified encoding and locale)
   shell: 'pg_createcluster --start --locale {{ postgresql_locale }} -e {{ postgresql_encoding }} -d {{ postgresql_data_directory }} {{ postgresql_pkg_version }} {{ postgresql_cluster_name }}'
-  sudo: yes
-  sudo_user: '{{ postgresql_admin_user }}'
+  become: true
+  become_user: '{{ postgresql_admin_user }}'
   when: postgresql_cluster_reset
 
 - name: update pg_hba.conf
