--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,3 +1,3 @@
 - hosts: all
   roles:
-    - { role: ../../ansible-role-postgresql, sudo: Yes }
+    - { role: ../../ansible-role-postgresql, become: true }
