--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -11,7 +11,7 @@
 - name: reset the cluster - drop the existing one
   shell: 'pg_dropcluster --stop {{ postgresql_pkg_version }} {{ postgresql_cluster_name }}'
   become: true
-  bocome_user: '{{ postgresql_admin_user }}'
+  become_user: '{{ postgresql_admin_user }}'
   when: postgresql_cluster_reset
 
 - name: reset the cluster - create a new one (with specified encoding and locale)
